# NetGuardian

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: default.yaml  signatures.yaml
scripts/: benchmark.py  generate_traffic.py
src/netguardian/: __init__.py  __main__.py  cli.py
src/netguardian/core/: __init__.py  connection.py  proxy_handler.py  server.py  tunnel.py
src/netguardian/inspection/: __init__.py  actions.py  engine.py  signature_store.py
src/netguardian/inspection/matchers/: __init__.py  header_matcher.py  regex_matcher.py  sql_injection.py
src/netguardian/protocol/: __init__.py  dns_resolver.py  http_parser.py
src/netguardian/security/: __init__.py  auth.py  ip_filter.py  rate_limiter.py  tls_manager.py
src/netguardian/telemetry/: __init__.py  logger.py  metrics.py  packet_dumper.py  stats_exporter.py
src/netguardian/utils/: __init__.py  buffer_pool.py  config.py  graceful_shutdown.py
tests/: conftest.py
tests/integration/: test_proxy_e2e.py
tests/unit/: test_buffer_pool.py  test_config.py  test_header_matcher.py  test_http_parser.py  test_ip_filter.py  test_metrics.py  test_rate_limiter.py  test_regex_matcher.py  test_signature_store.py  test_sql_injection.py
